--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,17 +1,23 @@
 {
-  "name": "api",
+  "name": "livedrop-api",
+  "type": "module",
   "version": "1.0.0",
-  "main": "index.js",
+  "main": "src/server.js",
   "scripts": {
+    "start": "node src/server.js",
+    "dev": "node --watch src/server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
+  "description": "LiveDrop E-commerce API",
   "dependencies": {
-    "body-parser": "^2.2.0",
     "cors": "^2.8.5",
-    "express": "^5.1.0"
+    "dotenv": "^17.2.3",
+    "express": "^5.1.0",
+    "mongoose": "^8.19.1",
+    "node-fetch": "^3.3.2",
+    "yaml": "^2.8.1"
   }
 }
